--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -14,6 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/ziya2"
         android:padding="10dp">
 
         <EditText
@@ -22,7 +23,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:hint="Enter Your Profile Name"
-            android:textColor="@color/black"
+            android:minHeight="48dp"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +37,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:hint="Enter Your mail Address"
-            android:textColor="@color/black"
+            android:minHeight="48dp"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/NameEt"
@@ -49,7 +52,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:hint="Enter Your Date of Birth"
-            android:textColor="@color/black"
+            android:minHeight="48dp"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/emailEt"
@@ -63,7 +67,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:hint="Enter Your District"
-            android:textColor="@color/black"
+            android:minHeight="48dp"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/dobEt"
@@ -77,7 +82,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:hint="Enter Your Mobile Number"
-            android:textColor="@color/black"
+            android:minHeight="48dp"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/districtEt"
@@ -92,14 +98,14 @@
             android:layout_marginBottom="88dp"
             android:backgroundTint="#2196F3"
             android:text="Update Profile"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/mobileEt"
             app:layout_constraintStart_toStartOf="@id/mobileEt"
             app:layout_constraintTop_toBottomOf="@+id/mobileEt"
-            app:strokeColor="@color/black"
+            app:strokeColor="@color/white"
             app:strokeWidth="2dp" />
 
 
