--- a/app/src/main/res/layout/activity_add_profile.xml
+++ b/app/src/main/res/layout/activity_add_profile.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="Enter Your Profile Name"
+        android:minHeight="48dp"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -35,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="Enter Your mail Address"
+        android:minHeight="48dp"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -43,19 +45,6 @@
         app:layout_constraintTop_toBottomOf="@id/profileNameEt"
         app:layout_goneMarginTop="20dp" />
 
-<!--    <EditText-->
-<!--        android:id="@+id/dobEt"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:hint="Enter Your Date of Birth"-->
-<!--        android:textColor="@color/black"-->
-<!--        android:textSize="18sp"-->
-<!--        android:textStyle="bold"-->
-<!--        app:layout_constraintEnd_toEndOf="@id/emailEt"-->
-<!--        app:layout_constraintStart_toStartOf="@id/emailEt"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/emailEt"-->
-<!--        app:layout_goneMarginTop="20dp" />-->
 
     <EditText
         android:id="@+id/dobEt"
@@ -63,8 +52,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:focusable="false"
-        android:inputType="none"
         android:hint="Enter Your Date of Birth"
+        android:inputType="none"
+        android:minHeight="48dp"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -79,6 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="Enter Your District"
+        android:minHeight="48dp"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -93,6 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:hint="Enter Your Mobile Number"
+        android:minHeight="48dp"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
